Implemented some TODOs