@@ -20,6 +20,8 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -82,9 +84,10 @@ public final class ExtractionUtil {
 	 * @throws IOException
 	 * @throws SAXException
 	 * @throws TikaException
+	 * @throws URISyntaxException
 	 */
-	public static String fromUrl(String url) throws IOException, SAXException, TikaException {
-		return fromUrl(new URL(url));
+	public static String fromUrl(String url) throws IOException, SAXException, TikaException, URISyntaxException {
+		return fromUrl((new URI(url)).toURL());
 	}
 
 	/**
